--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,8 @@
-node_modules
+// .eslintignore
+build/*
+public/*
+src/react-app-env.d.ts
+src/serviceWorker.ts
+server.js
+tsconfig.json
+.eslintcache
