--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "react-scripts": "4.0.1",
     "socket.io-client": "^3.1.0",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
