--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,25 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "build": "etsc"
+    "start": "node dist/index.js",
+    "build-etsc": "etsc",
+    "clean": "rm -rf dist && mkdir dist",
+    "build-babel": "npm run compile && babel -d ./dist ./src -s",
+    "build": "npm run clean && npm run build-babel",
+    "prod": "npm run build && node ./dist/server.js",
+    "compile": "tsc && babel src --out-dir dist --extensions .ts",
+    "postinstall": "npm run build"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "express": "4",
     "socket.io": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
     "@types/express": "4",
     "@types/node": "^14.14.22",
     "@types/socket.io": "^2.1.12",
@@ -20,5 +32,8 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "v15.8.0"
   }
 }
