--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,18 +7,16 @@
     "sourceMap": true,
     "strict": true,
     "noImplicitAny": true,
-    "rootDir": "./src",  
+    "rootDir": "./src",
     "outDir": "dist",
     "baseUrl": "./src",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-
-    "isolatedModules": true,
+    "isolatedModules": true
   },
+  "target": "es2015",
   "lib": ["es2015"],
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
